--- a/portfolio/css/styles.css
+++ b/portfolio/css/styles.css
@@ -3,40 +3,84 @@
 a {
   text-decoration: none;
 }
+body{
+  margin: 0;
+}
 header {
   width: 100%;
   display: inline-flex;
   flex-direction: row;
   justify-content: space-between;
-  border-bottom: 1px solid #212121;
 }
 header a {
-  text-decoration: none;
-  color: black;
+  font-family: 'Acme', cursive;
+  font-size: 2em;
+  margin: 25px 36px 0 0;
+  text-decoration: underline;
 }
 header p{
-  font-family: 'Acme', sans-serif;
-  font-size: 2.5em;
-  margin: 0 0 0 10px;
-  color: #94cea0;
+  font-family: 'Caveat Brush', sans-serif;
+  font-size: 4em;
+  text-shadow: 4px 4px 5px white;
+  margin: 10px 0 0 10px;
+  color: #1c1c1c;
 }
 .container {
   display: inline-flex;
   flex-direction: row;
+  flex-wrap: wrap;
   width: 100%;
+}
+.topMain {
+  width: 100%;
+  background-image: url("../images/roc2.jpg");
+  background-repeat: no-repeat;
+  background-size: 100% 100%;
+  height: 100vh;
+  margin: 0;
 }
 main {
   width: 50%;
+  font-family: 'Acme', sans-serif;
+  margin: 0;
+  height: 100%;
 }
+main p:first-child {
+  font-size: 2.4em;
+  margin: 20px 0 0 30px;
+  color: #57129f;
+}
+#moi3 {
+  width: 75%;
+  margin: 0;
+  position: relative;
+  bottom: 80px;
+  right: 155px;
+  border-bottom-right-radius: 20%;
+  border-bottom-left-radius: 47%;
+}
+
 /*aside*/
+
 aside { 
 width: 50%;
-font-family: 'Acme', sans-serif;
+margin: 0;
+/*margin-top: 140px;*/
+margin-top: 10px;
 }
-aside p:first-child {
-  font-size: 2em;
+aside p {
+  color: #57129f;
+  font-size: 1.5em;
+  font-family: 'Acme', sans-serif;
+}
+aside ul {
+  color: black;
+  list-style-type: none;
+  font-size: 1.5em;
+  font-family: Helvetica;
+  line-height: 2em;
   text-align: center;
-  color: #528881;
+  margin-right: 70%;
 }
 #twitterImg {
   width: 64px;
@@ -51,40 +95,106 @@ aside p:first-child {
   padding-left: 12px;
 }
 /*work*/
-
-.title p{
+.bottomMain {
+  background-image: url("../images/brick2.jpg");
+  background-size: 100% 100%;
+  background-size: cover;
+  height: 100vh;
+  width: 100%;
+  margin: 0;
+  display: inline-flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
+}
+.bottomMain h1 {
+  font-family: 'Caveat Brush', cursive;
+  font-size: 100px;
   color: white;
-  background-color: black;
+  text-shadow: 6px 6px 5px black;
   text-align: center;
+  width: 100%;
+  margin-bottom: 0;
+}
+
+.title {
+  color: white;
   font-size: 30px;
   font-weight: 500;
   position: relative;
   bottom: 220px;
-  visibility: hidden;
-  transition: all 2s;
-  z-index: 1;
-
+  width: 75%;
+  margin: 0 auto;
+  visibility: default;
+  -webkit-transition: visibility 2s;
 }
 .work {
   width: 25%;
+  text-align: center;
 }
 .workImage {
+  width: 75%;
+  min-height: 250px;
+  border: 3px solid white;
   transition: opacity 2s;
-  z-index: 0;
 }
-
+.workImage:hover .title {
+  visibility: hidden;
+  opacity: 1;
+}
 .workImage:hover {
   opacity: 0.5;
+  border-color: black;
 }
-.workImage:hover ~.title p{
-  visibility: visible;
+/*Footer*/
+footer {
+  background-color: black;
+  text-align: center;
+  width: 100%
+}
+footer p {
+  color: #A9c4c6;
+  padding-top: 5px;
+  margin: 0;
+}
 
-}
 @media only screen and (max-width: 750px) {
+  .topMain {
+    width: 100%;
+    height: 100%;
+  }
   .container {
     flex-direction: column;
+    flex-wrap: wrap;
+  }
+  header p {
+    font-size: 3em;
   }
   main, aside {
     width: 100%;
+    flex-direction: column;
+    margin-bottom: 0;
   }
-}
+  #moi3 {
+    width:85%;
+    bottom: 0px;
+    right: 155px; 
+  }
+  /*aside*/
+  aside {
+    margin: 0 0 162px 20px;
+  }
+  aside p:first-child {
+    margin-top: 0;
+  }
+
+  /*work*/
+  .bottomMain {
+    height: 100%;
+    flex-direction: column;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+  }
+  .work {
+    width: 100%;
+  }
