--- a/css/styles.css
+++ b/css/styles.css
@@ -1,10 +1,11 @@
-/*var macarena = {"color:#212121;"};*/
-/* colourlovers palette is called dusty days - figure out how to set variables*/
+
 a {
   text-decoration: none;
 }
 body{
   margin: 0;
+  padding: 0;
+  background-color: rgb(34, 34, 34);
 }
 header {
   width: 100%;
@@ -12,148 +13,171 @@ header {
   flex-direction: row;
   justify-content: space-between;
 }
-header a {
-  font-family: 'Acme', cursive;
-  font-size: 2em;
-  margin: 25px 36px 0 0;
-  text-decoration: underline;
-}
 header p{
-  font-family: 'Caveat Brush', sans-serif;
-  font-size: 4em;
-  text-shadow: 4px 4px 5px white;
+  font-family: 'Hammersmith One', sans-serif;
+  font-size: 3.6em;
   margin: 10px 0 0 10px;
-  color: #1c1c1c;
-}
-.container {
-  display: inline-flex;
-  flex-direction: row;
-  flex-wrap: wrap;
-  width: 100%;
+  color: white;
 }
 .topMain {
-  width: 100%;
-  background-image: url("../images/roc2.jpg");
-  background-repeat: no-repeat;
-  background-size: 100% 100%;
+  width: 100vw;
   height: 100vh;
   margin: 0;
+  background-color: rgb(34, 34, 34);
+}
+#roc{
+  width: 100%;
+  position: absolute;
+  bottom: 0;
 }
 main {
-  width: 50%;
+  width: 90%;
   font-family: 'Acme', sans-serif;
-  margin: 0;
-  height: 100%;
+  margin: 0 auto;
+  height: 50vh;
+  background-color: white;
+  position: relative;
+  margin-top: 40px;
+  -webkit-box-shadow:inset 0px 0px 0px 10px #343434;
+  -moz-box-shadow:inset 0px 0px 0px 10px #343434;
+  box-shadow:inset 0px 0px 0px 10px #343434;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
 }
-main p:first-child {
+.mainLeft p:first-child {
   font-size: 2.4em;
   margin: 20px 0 0 30px;
   color: #57129f;
+  padding-top: 5px;
+}
+.mainLeft {
+  order: 1;
+  width: 50%;
+  margin: 0;
+}
+.mainRight {
+  order: 2;
+  width: 50%;
+  text-align: center;
+  padding-top: 5%;
+  margin: 0;
+  margin-bottom: 30px;
+}
+.mainRight a {
+  font-family: 'Acme', cursive;
+  font-size: 2em;
+  margin: 25px 0 0 0;
+  text-decoration: underline;
+  color: #57129f;
+  padding-top: 10px;
+}
+#arrow {
+  padding-top: 20px;
+  width: 5%;
+  animation: bounce 1s infinite linear;
+}
+@keyframes bounce {
+  0% { transform: translateY(-5px)  }
+  50% { transform: translateY(10px) }
+  100% { transform: translateY(-5px) }
 }
 #moi3 {
-  width: 75%;
+  width: 27%;
   margin: 0;
-  position: relative;
-  bottom: 80px;
-  right: 155px;
-  border-bottom-right-radius: 20%;
-  border-bottom-left-radius: 47%;
+  position: absolute;
+  bottom: 0;
+  left: -10px;
 }
-
-/*aside*/
-
-aside { 
-width: 50%;
-margin: 0;
-/*margin-top: 140px;*/
-margin-top: 10px;
-}
-aside p {
-  color: #57129f;
-  font-size: 1.5em;
-  font-family: 'Acme', sans-serif;
-}
-aside ul {
-  color: black;
-  list-style-type: none;
-  font-size: 1.5em;
-  font-family: Helvetica;
-  line-height: 2em;
+.title {
+  font-family: 'Hammersmith One', sans-serif;
+  font-size: 90px;
+  color: white;
+  display: block;
+  width: 100vw;
   text-align: center;
-  margin-right: 70%;
-}
-#twitterImg {
-  width: 64px;
-}
-#facebookImg {
-  width: 64px;
-}
-#emailImg {
-  width: 64px;
-}
-.socialMedia img{
-  padding-left: 12px;
+  padding: 50px 0 50px 0;
+  margin: 0 auto;
+  margin-left: 310px;
 }
 /*work*/
-.bottomMain {
-  background-image: url("../images/brick2.jpg");
-  background-size: 100% 100%;
-  background-size: cover;
-  height: 100vh;
+#portfolio2{
+  height: 100%;
   width: 100%;
-  margin: 0;
-  display: inline-flex;
+  background-color: rgb(34,34,34);
+  display: flex;
+  justify-content: space-evenly;
+  flex-wrap: wrap;
+  padding-bottom: 80px;
+}
+/*MDL cards*/
+.card{
+  border: 1px solid white;
+  border-bottom: none;
+  background: rgba(0,0,0,0.09);
+  background-color: white; 
+  width: 330px;
+  margin-top: 20px;
+  margin-left: 20px;
+  display: inline-block;
   flex-direction: row;
   flex-wrap: wrap;
+  height: 310px;
   justify-content: space-evenly;
+} 
+.card h2 a{
+  color: black;
 }
-.bottomMain h1 {
-  font-family: 'Caveat Brush', cursive;
-  font-size: 100px;
-  color: white;
-  text-shadow: 6px 6px 5px black;
-  text-align: center;
+.card__media{
+  background-color:white;
+}
+.card__media img{
   width: 100%;
-  margin-bottom: 0;
+  height: 236px;
 }
-
-.title {
-  color: white;
-  font-size: 30px;
-  font-weight: 500;
-  position: relative;
-  bottom: 220px;
-  width: 75%;
-  margin: 0 auto;
-  visibility: default;
-  -webkit-transition: visibility 2s;
-}
-.work {
-  width: 25%;
-  text-align: center;
-}
-.workImage {
-  width: 75%;
-  min-height: 250px;
-  border: 3px solid white;
-}
-.workHover {
-  border: 3px solid black;
-  opacity: 0.5;
-}
-.portfolioPage {
-  height: 100vh;
-}
-/*Footer*/
-footer {
-  background-color: black;
-  text-align: center;
-  width: 100%
-}
-footer p {
-  color: #A9c4c6;
-  padding-top: 5px;
+.card__actions{
   margin: 0;
+  margin-left: 2px;
+}
+.card__actions h2{
+  margin: 0;
+  padding: 0;
+  color: black;
+}
+.card_actions> h2> a{
+  color: rgb(0,0,0);
+}
+.card__supporting-text{
+  color: rgba(0,0,0,0.7);
+}
+.cardTitle:hover {
+  color: grey;
+}
+.clickHand{
+  position: relative;
+  top: 13px;
+  width: 34px;
+  margin-left: 3px;
+}
+footer {
+  width: 100%;
+  background-color: rgb(34, 34, 34);
+  color: white;
+  font-family: 'Hammersmith One', sans-serif;
+  font-size: 22px;
+  padding-left: 25px;
+  display: inline-flex;
+  flex-direction: row;
+}
+#socialMediaIcons {
+  float: right;
+  display: inline-flex;
+  flex-direction: row;
+  position: relative;
+  top: 25vh;
+}
+.socialMediaImg {
+  width: 50px;
 }
 
 @media only screen and (max-width: 750px) {
@@ -161,38 +185,50 @@ footer p {
     width: 100%;
     height: 100%;
   }
-  .container {
-    flex-direction: column;
-    flex-wrap: wrap;
-  }
+ 
   header p {
     font-size: 3em;
   }
-  main, aside {
+  main {
+    height: 100%;
     width: 100%;
     flex-direction: column;
     margin-bottom: 0;
+    flex-wrap: wrap;
+  }
+  .mainLeft{
+    width: 100%;
+    flex-direction: column;
+    border-bottom: 10px  inset #343434;
+  }
+  .mainRight{
+    flex-direction: column;
+    width: 100%;
+    height: 100%;
   }
   #moi3 {
-    width:85%;
-    bottom: 0px;
-    right: 155px; 
+    width:45%;
+    position: relative;
+    top: 26px;
   }
-  /*aside*/
-  aside {
-    margin: 0 0 162px 20px;
-  }
-  aside p:first-child {
-    margin-top: 0;
-  }
-
-  /*work*/
-  .bottomMain {
-    height: 100%;
+  #socialMediaIcons {
     flex-direction: column;
-    flex-wrap: wrap;
-    justify-content: space-evenly;
+    margin-top: 0;
+    top: 0;
+    right: 30px;
   }
-  .work {
-    width: 100%;
+  #roc {
+    position: relative;
   }
+  /* porfolio */
+  .title {
+    margin-top: 10px;
+    font-size: 3em;
+    margin-left: 10px;
+  }
+  .card {
+    margin: 20px auto;
+  }
+}
+
+
