--- a/css/style.css
+++ b/css/style.css
@@ -185,7 +185,7 @@ footer h4 {
         0%{left:70%}
         100%{left: 100%}
     }
-    header li {
+    header > li {
     font-size: 16px;
     position: relative;
     top: 36px;
