--- a/css/style.css
+++ b/css/style.css
@@ -102,7 +102,8 @@ h3 {
     background: rgba(0,0,0,0.09);
     background-color: white; 
     width: 330px;
-    margin-top: 20px;
+    margin-top: 50px;
+    margin: 50px 5px 5px 5px;
     display: inline-block;
     flex-direction: row;
     flex-wrap: wrap;
@@ -118,25 +119,14 @@ h3 {
     width: 100%;
     height: 235px;
 }
-/*
+
 .cardInfo {
-    color: white;
-    position: relative;
-    bottom: 87%;
     text-align: center;
-    background-color: #00B7B2;
     font-size: 16px;
-    margin: 1px;
+    margin-top: 15px;
     width: 100%;
-    height: 237px;
-    line-height: 237px;
-    vertical-align: middle; 
-    visibility: hidden;
 }
-.cardImg:hover {
-    visibility: hidden;
-}
-*/
+
 
 .title {
     margin:0;
